force-app/main/default/objects/Product_Mapping__mdt/Product_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Product Mapping</label>
    <pluralLabel>Product Mappings</pluralLabel>
</CustomObject>