force-app/main/default/objects/Product_Mapping__mdt/fields/External_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Id__c</fullName>
    <label>External Product Id</label>
    <type>Text</type>
    <length>80</length>
</CustomField>