force-app/main/default/objects/Product_Mapping__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Text</type>
    <length>80</length>
</CustomField>